# 4ti2

./: .gitignore  Makefile.am  configure.ac  doxygen.cfg
m4/: .gitignore
src/doxygen-settings/: .gitignore  Doxyconf
src/groebner/: .gitignore  Bounded.cpp  GraverBasis.cpp  GraverBasis.h  GraverComputeState.cpp  GraverComputeState.h  GraverTypes.h  GraverVector.cpp  GraverVector.h  GraverVectors.cpp  GraverVectors.h  GraverVectorsNaive.cpp  GraverVectorsNaive.h  GraverVectorsWithFilter.cpp  GraverVectorsWithFilter.h  Makefile.am  ParallelGraver.cpp  ParallelGraver.h  ReductionTree.cpp  ReductionTree.h  Vector.cpp  Vector.h  VectorArray.cpp  VectorArray.h  graver_main.cpp  graver_main.h  main.cpp
src/groebner/unittests/: B.lat  GraverComputeState.cpp  GraverVector.cpp  GraverVectors.cpp  LatticeBasis.cpp  Makefile.am  ParallelGraver.cpp  ReductionTree.cpp  Vector.cpp
src/zsolve/: Algorithm.hpp  BitSet.h  Controller.hpp  DefaultController.hpp  ExtendedPottier.hpp  GraverAPI.hpp  GraverJob.hpp  HilbertAPI.hpp  Lattice.hpp  Makefile.am  Norms.hpp  Options.cpp  ParallelGraver.hpp  ParallelPottier.hpp  UniqueVectorsHash.hpp  ValueTree.hpp  Variables.hpp  Vector.hpp  VectorArray.hpp  VectorArrayAPI.hpp  ZSolveAPI.hpp  main.cpp
src/zsolve/unittests/: Makefile  ValueTree.cpp  Vector.cpp  VectorArray.cpp  testTest.cpp
test/: .gitignore
